[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cmw-api"
version = "0.3.0"
description = "Python SCPI control library for the Rohde & Schwarz CMW wideband radio communication tester"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AsafVadai" }]
keywords = ["rohde-schwarz", "cmw", "cmw500", "scpi", "rf", "instrument", "test-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

# The raw-TCP transport has NO external dependencies.
dependencies = []

[project.optional-dependencies]
# VISA transport (GPIB / USB-TMC / VXI-11 / HiSLIP) needs pyvisa.
visa = ["pyvisa>=1.13", "pyvisa-py>=0.7"]

[project.urls]
Homepage = "https://github.com/AsafVadai/cmw-api"
Repository = "https://github.com/AsafVadai/cmw-api"

# The package files live at the repository root (flat layout), but the import
# name is "cmw_api". Map the package to the root directory so that
# `pip install .` exposes `import cmw_api` correctly.
[tool.setuptools]
packages = ["cmw_api"]

[tool.setuptools.package-dir]
cmw_api = "."
